--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -15,7 +15,12 @@ body {
 }
 
 .header-wrapper {
-    background: #001529;
+    background: #FFE7AB;
+}
+
+.header1 {
+    background: #FFE7AB;
+    text-align: center;
 }
 
 .ant-menu {
@@ -110,7 +115,7 @@ body {
 
 .content {
     overflow: initial;
-    padding: 50px 0;
+    padding: 0 0;
     background: transparent;
     min-height: 300px;
     display: flex;
@@ -239,6 +244,37 @@ code {
         text-align: center;
     }
 }
+
+
+/*// Extra small devices (portrait phones, less than 576px)*/
+/*!*@media (max-width: 575.98px) { ... }*!*/
+
+/*// Small devices (landscape phones, 576px and up)*/
+/*!*@media (min-width: 576px) and (max-width: 767.98px) { ... }*!*/
+
+/*// Medium devices (tablets, 768px and up)*/
+/*!*@media (min-width: 768px) and (max-width: 991.98px) { ... }*!*/
+
+/*// Large devices (desktops, 992px and up)*/
+/*!*@media (min-width: 992px) and (max-width: 1199.98px) { ... }*!*/
+
+/*// Extra large devices (large desktops, 1200px and up)*/
+/*!*@media (min-width: 1200px) { ... }*!*/
+
+/*layout */
+#components-layout-demo-side .logo {
+    height: 32px;
+    background: rgba(255, 255, 255, 0.2);
+    margin: 16px;
+}
+
+.site-layout .site-layout-background {
+    background: #fff;
+}
+
+
+
+
 
 
 /*// Extra small devices (portrait phones, less than 576px)*/
