--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,7 +1,11 @@
-/*.login {*/
-/*    max-width: 340px;*/
-/*    margin: 0 auto;*/
-/*    padding: 1rem;*/
-/*    border: 1px solid #ccc;*/
-/*    border-radius: 4px;*/
-/*}*/
+.login {
+    max-width: 350px;
+    margin: 70px 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    text-align: center;
+    justify-content: center;
+    justify-items: center;
+
+}
